@@ -1,5 +1,14 @@
 2006-01-15  Davyd Madeley  <davyd@madeley.id.au>
 
+	* Makefile.am:
+	* test_metar.c:  New program to test station report parsing
+	* weather-metar.c: (metar_parse): remove 'static'
+	* weather-priv.h: add metar_parse()
+
+	Patch from Frank Solensky <frank@solensky.org>. Closes #144792.
+
+2006-01-15  Davyd Madeley  <davyd@madeley.id.au>
+
 	* weather.c:
 	* weather-priv.h: move prototype for calc_sun to header and remove
 	  static declaration.
